# virtual-machines

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Readme.md  enums.py  run-cma.sh  run.sh
.github/workflows/: doxygen-gh-pages.yml
lib/: CMachine.cpp  CMachine.hpp  Common.cpp  Common.hpp  Error.cpp  Error.hpp  MaMachine.cpp  MaMachine.hpp  Parser.cpp  Parser.hpp
resources/: assignment-01-03.cvm  example.cvm  factorial.cvm  push.cvm  push.mvm
test/: CMaTest.cpp  MaMaTest.cpp  Test.cpp  stdcapture.h
tools/: CMa.cpp  MaMa.cpp  Main.cpp
